src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  line-height: 1.75;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
} */

/* .learning {
  background-color:coral;
}

.familiar {
  background-color: aquamarine;
}

.learned {
  background-color: lightgray;
} */

/* .word { */
  /* border: 1px solid rgba(0, 0, 0, 0);
  padding: 2px;
  border-radius: 3px; */
/* } */

/* .word:hover {
  border-color: blue;
} */

/* .phrase {
  border: 1px solid rgba(0, 0, 0, 0);
  padding: 4px;
  border-radius: 3px;
}

.phrase:hover {
  border-color: red;
} */

/* span > ::selection {
  background-color: rgb(1, 0, 0);
}

:not(p) > span:active {
  background-color: rgb(1, 0, 0);
} */

/* ::slection {
  appearance: none;
} */

/* iframe {
  overflow-x: hidden;
  -webkit-overflow-scrolling: touch; */
/* } */

/* iframe html {
  -webkit-transform:translate3d(0,0,0);
  overflow-x: hidden;
}

iframe > html {
  width: 300px;
} */

.hero {
  /* max-height: calc(100vh - 64px); */
  max-height: 100vh;
  box-sizing: border-box;
  padding-top: 64px;
  margin-top: -64px;
}

html {
  scroll-behavior: smooth;
}

